--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -1,5 +1,5 @@
 
-{% extends "./views/layouts/GUIDANCEROBOTICS.html" %}
+{% extends "./views/layouts/GUIDANCEADDINGVALUE.html" %}
 
 
 {% block guidance %}
@@ -13,32 +13,27 @@
 
 
 <p>You can apply if you:</p>
-<ul>
-  <li>are a farmer or agricultural contractor whose business is registered in England </li>
-  <li>will do the grant-funded work in England </li>
-  <li>estimate the project costs are over £87,500 </li>
+  <ul class="govuk-list govuk-list--bullet">
+  <li>are an agricultural, horticultural or forestry producer (primary producers) </li>
+  <li>provide processing services to a primary producer</li>
+  <li>are a separate processing business 100% owned by a primary producer</li>
+  <li>will do the grant-funded work in England and your business is registered in England</li>
+  <li>estimate the project costs are over £87,500</li>
 </ul>
-<p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
+
+
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
-<h3 class="govuk-heading-s">Slurry treatment equipment</h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>mild acidification equipment (all projects must buy acid storage, dosing equipment, mixing tank and pump)</li>
-      <li>acidification infrastructure (any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage)</li>
-    </ul>
-
-<h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
-  <p>The grant can pay up to 40% of the costs for:</p>
-    <ul>
-      <li>robotic or innovative horticulture and arable equipment (for example, robotic weeding, advanced ventilation controls)</li>
-      <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
-      <li>innovative LED lighting equipment (for example, wavelength-specific LED lighting for crop and livestock production)</li>
+      <li>processing equipment or machinery</li>
+      <li>controlled-atmosphere or dynamic controlled-atmosphere storage</li>
+      <li>constructing or improving buildings (for example, a new building for cheese making)</li>
+      <li>specialist vehicles (for example, forklifts or refrigerated lorries)</li>
+      <li>retail facilities (for example, a farm shop)</li>
     </ul>
 
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
-<p>If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
-
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
   <thead class="govuk-table__head">
@@ -62,9 +57,6 @@
   </tbody>
 </table>
 
-
-
-
 <p>You must have applied for planning permission before you submit a full application. Any planning permission must be in place by 31 December 2022.</p>
 <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
 <p>Before you start the project, you can:</p>
@@ -81,7 +73,7 @@
 <p>You’ll need:</p>
 <ul>
   <li>information about your business (for example, number of employees, turnover)</li>
-  <li>information about the project (for example, volume of slurry or digestate, the project impact)</li>
+  <li>information about the project (for example, the types of products being processed and how you will add value, the project impact)</li>
   <li>a list of the items you’d like to buy for the project</li>
   <li>an estimate of the total cost of the items</li>
 </ul>
@@ -89,10 +81,12 @@
 <p>After you have gone through the checker, you’ll get a score showing how well your project fits the funding priorities.</p>
 <p>RPA wants to fund projects that: </p>
 <ul>
-  <li>improve productivity</li>
+  <li>improve processing and supply chains</li>
   <li>improve the environment</li>
-  <li>introduce innovation</li>
+  <li>encourage collaboration and partnerships</li>
+  <li>grow your business</li>
 </ul>
+
 <p>When you are happy with your score, you can submit your details to the RPA.</p>
 <p>You can go back through the checker as many times as you like but you can only submit your details once.</p>
 
@@ -100,7 +94,7 @@
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
-<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Improving Farm Productivity grant manual</a> before you submit an application.</p>
+<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Adding Value grant manual</a> before you submit an application.</p>
 <p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
 <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
