--- a/app/views/addingvalue/current/start.html
+++ b/app/views/addingvalue/current/start.html
@@ -40,16 +40,17 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a farmer or agricultural contractor whose business is registered in England </li>
-            <li>will do the grant-funded work in England </li>
-            <li>estimate the project costs are over £87,500 </li>
+            <li>are an agricultural, horticultural or forestry producer (primary producers) </li>
+            <li>provide processing services to a primary producer</li>
+            <li>are a separate processing business 100% owned by a primary producer</li>
+            <li>will do the grant-funded work in England and your business is registered in England</li>
+            <li>estimate the project costs are over £87,500</li>
           </ul>
-          <p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
         </div>
 
-        <p><div class="govuk-inset-text">
-  If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
-</div></p>
+      <div class="govuk-inset-text">
+        If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
+      </div>
 
 
       </div>
@@ -67,7 +68,7 @@
       <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, volume of slurry or digestate, the impact the project will have)</li>
+        <li>information about the project (for example, the types of products being processed and how you will add value, the impact the project will have)</li>
         <li>a list of the items you’d like to buy for the project</li>
         <li>an estimate of the total cost of the items</li>
       </ul>
