--- a/app/views/addingvalue/current/views/layouts/GUIDANCEADDINGVALUE.html
+++ b/app/views/addingvalue/current/views/layouts/GUIDANCEADDINGVALUE.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Farming Transformation Fund slurry acidification grant
+Farming Transformation Fund Adding Value Grant
 {% endblock %}
 
 {% block header %}
@@ -64,11 +64,11 @@ Farming Transformation Fund slurry acidification grant
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund Improving Farm Productivity Grant
+        Farming Transformation Fund Adding Value Grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Get a grant for innovative farming equipment that increases productivity and improves the environment. </p>
+    <p class="gem-c-lead-paragraph">Get a grant to add value to primary products through processing and storage.  </p>
 
   </div>
 </div>
@@ -78,8 +78,8 @@ Farming Transformation Fund slurry acidification grant
     <div class="govuk-grid-column-two-thirds metadata-column">
       <div class="app-c-publisher-metadata" lang="en">
         <div class="app-c-published-dates " lang="en">
-          Published 21 June 2021
-          <br>Last updated 5 October 2021
+          Published 20 October 2021
+          <br>Last updated 21 October 2021
           — <a href="#history">see all updates</a>
         </div>
 
