--- a/app/views/addingvalue/current/business-type-fail.html
+++ b/app/views/addingvalue/current/business-type-fail.html
@@ -13,7 +13,8 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-  <a class="govuk-back-link" href="other-robotic-equipment">Back</a>
+
+  <a class="govuk-back-link" href="business-type">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -25,19 +26,18 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-
-      <p class="govuk-body">RPA will only fund items that: <p>
+      <p class="govuk-body">This grant is for businesses who: </p>
       <ul class="govuk-list govuk-list--bullet">
-          <li>have a sensing system</li>
-          <li>have a decision-making capability</li>
-          <li>use actuators</li>
-          </ul>
-      <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-link--no-visited-state govuk-!-font-size-19">
+      <li>are agricultural, horticultural or forestry producers (primary producers)</li>
+      <li>provide processing services to a primary producer</li>
+      <li>are a separate processing business 100% owned by a primary producer</li>
+      </ul>
+
+      <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
          See other grants you may be eligible for.
       </a>
-      </p>
+      </div>
 
-    </div>
   </div>
 
 {% endblock %}
