--- a/app/views/addingvalue/current/buying-from-farmers.html
+++ b/app/views/addingvalue/current/buying-from-farmers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What impact will the project have?
+Will you buy materials from other farmers?
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,30 +23,31 @@ What impact will the project have?
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukRadios({
-                  idPrefix: 'project-impact',
-                  name: 'project-impact',
+                  classes: "govuk-radios--inline",
+                  idPrefix: 'buying-from-farmers',
+                  name: 'buying-from-farmers',
                   fieldset: {
                       legend: {
-                          text: 'What impact will the project have?',
-                          isPageHeading: true,
+                          text: 'Will you buy materials from other farmers?',
+                          isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
                   hint: {
-                  text: "Select one option"
+                  html: ''
                   },
 
                   items: [
                 {
-                  value: "Diversifying into creating added-value products",
-                  text: "Diversifying into creating added-value products",
-                  checked: checked("project-impact", "Diversifying into creating added-value products")
+                  value: "Yes",
+                  text: "Yes",
+                  checked: checked("buying-from-farmers", "Yes")
                 },
 
                 {
-                  value: "Increase volume or range of added-value products",
-                  text: "Increase volume or range of added-value products",
-                  checked: checked("project-impact", "Increase volume or range of added-value products")
+                  value: "No",
+                  text: "No",
+                  checked: checked("buying-from-farmers", "No")
                 }
                 ]
               }) }}
@@ -65,7 +66,7 @@ What impact will the project have?
           <p class="govuk-body">RPA wants to fund projects that:</p>
           <ul class="govuk-list govuk-list--bullet">
           <li>improve processing and supply chains</li>
-          <li>grow your business</li>
+          <li>encourage collaboration and partnerships</li>
           </ul>
 
 
