--- a/app/views/addingvalue/current/remaining-costs-fail.html
+++ b/app/views/addingvalue/current/remaining-costs-fail.html
@@ -26,9 +26,16 @@
       </h1>
 
       <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
-
+      <p>You also cannot use money from a producer organisation under the Fresh Fruit and Vegetable Aid Scheme.</p>
 {{ govukInsetText({
-    text: 'You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.'
+    html: '<p>You can use:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>loans</li>
+      <li>overdrafts</li>
+      <li>the Basic Payment Scheme</li>
+      <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
+    </ul>  
+      '
 }) }}
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
