--- a/app/views/addingvalue/current/remaining-costs.html
+++ b/app/views/addingvalue/current/remaining-costs.html
@@ -62,11 +62,14 @@ Meeting the remaining project costs
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
-
-<p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme. </p>
-          <a href="#">
-          </a>
-
+          <p>You also cannot use money from a producer organisation under the Fresh Fruit and Vegetable Aid Scheme.</p>
+          <p>You can use:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>loans</li>
+            <li>overdrafts</li>
+            <li>the Basic Payment Scheme</li>
+            <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
+          </ul>  
       </div>
 
       </div>
