--- a/app/views/addingvalue/current/consent.html
+++ b/app/views/addingvalue/current/consent.html
@@ -34,7 +34,7 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
             <label class="govuk-label govuk-checkboxes__label" for="confirm">
-            (Optional) I confirm.
+            (Optional) I confirm
             </label>
           </div>
       </fieldset>
