--- a/app/views/addingvalue/current/adding-value.html
+++ b/app/views/addingvalue/current/adding-value.html
@@ -83,7 +83,12 @@ How will you add value to the products?
                 ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1"  data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
 
       </form>
