--- a/app/views/addingvalue/current/applying.html
+++ b/app/views/addingvalue/current/applying.html
@@ -32,15 +32,9 @@
             <br><br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "Farmer") }}>
+                <input class="govuk-radios__input" id="applicant" name="applicant" type="radio" value="Applicant" {{ checked("applicant", "Applicant") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant">
-                  Farmer
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Contractor" {{ checked("applicant", "Contractor") }}>
-                <label class="govuk-label govuk-radios__label" for="applicant-1">
-                  Contractor
+                  Applicant
                 </label>
               </div>
               <div class="govuk-radios__item">
