--- a/app/views/addingvalue/current/buying-from-farmers.html
+++ b/app/views/addingvalue/current/buying-from-farmers.html
@@ -52,8 +52,12 @@ Will you buy materials from other farmers?
                 ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
-
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
       </form>
     </div>
