--- a/app/views/addingvalue/current/check-details.html
+++ b/app/views/addingvalue/current/check-details.html
@@ -189,92 +189,7 @@
   </table>
 {% endif %}
 
-{# include contractor's details only if applicant is Contractor  #}
-
-{% if (data['tenancy'] == "Contractor") %}
-
-<table class="govuk-table">
-    <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-            <div class="govuk-summary-list__row--no-border">
-                <dt class="govuk-summary-list__key">
-                    <p class="govuk-heading-m"><strong>Contractor's details</strong></p>
-                </dt>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-body" href="contractor-details">
-                        Change<span class="govuk-visually-hidden">contractor's details</span>
-                    </a>
-                </dd>
-            </div>
-        </tr>
-        <hr>
-    </thead>
-
-
-
-
-
-
-
-
-
-
-<dl class="govuk-summary-list govuk-!-margin-bottom-9">
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Name
-    </dt>
-    <dd class="govuk-summary-list__value">
-      {{data['contractor-firstname']}} {{data['contractor-lastname']}}
-    </dd>
-    <dd class="govuk-summary-list__actions">
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Business name
-    </dt>
-    <dd class="govuk-summary-list__value">
-      {{data['contractor-business']}}
-    </dd>
-    <dd class="govuk-summary-list__actions">
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-    Contact details
-    </dt>
-    <dd class="govuk-summary-list__value">
-          {{ data['contractor-email'] }}
-      <br>{{ data['contractor-landline'] }}
-      <br>{{ data['contractor-mobile'] }}
-    </dd>
-    <dd class="govuk-summary-list__actions">
-
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Business address
-    </dt>
-    <dd class="govuk-summary-list__value">
-      {{ data['contractor-address1'] }}
-      <br> {{ data['contractor-address2'] }}
-       {{ data['contractor-county'] }}
-       {{ data['contractor-postcode'] }}
-    </dd>
-    <dd class="govuk-summary-list__actions">
-
-    </dd>
-  </div>
-
-</dl>
-
-</table>
-{% else %}
-
-
-
+{# -if else rule here --- not includeing contractor's details only if applicant is Contractor  #}
 
 
 
@@ -283,11 +198,11 @@
         <tr class="govuk-table__row">
             <div class="govuk-summary-list__row--no-border">
                 <dt class="govuk-summary-list__key">
-                    <p class="govuk-heading-m"><strong>Farmer's details</strong></p>
+                    <p class="govuk-heading-m"><strong>Applicant's details</strong></p>
                 </dt>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-body" href="farmer-details">
-                        Change<span class="govuk-visually-hidden">farmer's details</span>
+                    <a class="govuk-link govuk-body" href="applicant-details">
+                        Change<span class="govuk-visually-hidden">applicant's details</span>
                     </a>
                 </dd>
             </div>
@@ -349,7 +264,7 @@
     </dl>
 
 </table>
-{% endif %}
+
 
         </div>
      </div>
