--- a/app/views/addingvalue/current/future-customers.html
+++ b/app/views/addingvalue/current/future-customers.html
@@ -60,8 +60,12 @@ Who will your customers be after the project?
                 ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
-
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
       </form>
     </div>
