--- a/app/views/addingvalue/current/products-processed.html
+++ b/app/views/addingvalue/current/products-processed.html
@@ -100,8 +100,12 @@ What type of products are being processed?
               ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
-
+       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1 " data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
       </form>
     </div>
@@ -114,7 +118,7 @@ What type of products are being processed?
           <p class="govuk-body">RPA wants to fund projects that:</p>
           <ul class="govuk-list govuk-list--bullet">
           <li>improve processing and supply chains</li>
-          <li>grow your business</li>
+
           </ul>
 
 
