--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -20,13 +20,13 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Guidance: Adding value grant</a></p>
+        <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Guidance: Adding value grant</a></p>
           <p class='govuk-list app-list--definition'>
-            <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
+            <a href='addingvalue/current/start' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Confirmation email</a><br>
+        <a href='addingvalue/current/email' class="govuk-link--no-visited-state">Confirmation email</a><br>
           User will receive a confirmation email, with their answers. Service is routed by GOV Notify.</p>
       </div>
 
