--- a/app/views/addingvalue/current/tenancy.html
+++ b/app/views/addingvalue/current/tenancy.html
@@ -27,7 +27,7 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukRadios({
-                  classes: "govuk-radios",
+                  classes: "govuk-radios--inline",
                   idPrefix: 'tenancy',
                   name: 'tenancy',
                   fieldset: {
@@ -51,11 +51,6 @@
                   value: "No",
                   text: "No",
                   checked: checked("tenancy", "No")
-                },
-                {
-                  value: "Contractor",
-                  text: "Not applicable – I’m a contractor ",
-                  checked: checked("tenancy", "Contractor")
                 }
               ]
               }) }}
