--- a/app/views/addingvalue/current/environmental-impact.html
+++ b/app/views/addingvalue/current/environmental-impact.html
@@ -91,7 +91,7 @@ How will the project improve the environment?
 
 
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Get score</button></p>
+          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Get your score</button></p>
 
 
       </form>
