--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,10 +9,10 @@
 -->
 
 <h1 class="govuk-heading-l">
-  Grants prototypes
+  Tactical grant prototypes
 </h1>
 <p>
-  The following were built using GOV.UK Prototype Kit v9.8.0.
+  The following were built using GOV.UK Prototype Kit v9.15.0.
 </p>
 
 <!--
@@ -28,25 +28,26 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="water">
-          Water resource management EoI
-        </a></td>
-      <td class="govuk-table__cell">Eligibility and expression of interest</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="slurry">Productivity grant - Slurry</a>
+      <td class="govuk-table__cell"><a href="addingvalue">Adding value grant</a>
         </td>
-      <td class="govuk-table__cell">Checker (v3 - last updated on 15 October 2021)</td>
+      <td class="govuk-table__cell">Checker (v1 - last updated on 26 October)</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="robotics">Productivity grant - Robotics and innovation</a>
         </td>
-      <td class="govuk-table__cell">Checker (v4 - last updated on 15 October 2021)</td>
+      <td class="govuk-table__cell">Checker (v4 - last updated on 19 October 2021)</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="addingvalue">Adding value grant</a>
+      <td class="govuk-table__cell"><a href="slurry">Productivity grant - Slurry</a>
         </td>
-      <td class="govuk-table__cell">Checker (baseline prototype TBC)</td>
+      <td class="govuk-table__cell">Checker (v3 - last updated on 19 October 2021)</td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="water">
+          Water resource management EoI
+        </a></td>
+      <td class="govuk-table__cell">Checker (v7 - private beta, last updated on 1 of June 2021)</td>
     </tr>
   </tbody>
 </table>
